--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "react-test-renderer": "^17.0.2",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0"
   }
