--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.14",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/redux-form": "^8.3.3",
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "node-sass": "^6.0.1",
@@ -16,6 +21,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "reselect": "^4.0.0",
+    "typescript": "^4.5.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
